# CRM-IA-VR

./: .dockerignore  .gcloudignore  Dockerfile  Dockerfile.complex  README.md  app.py  app_original.py  cloudbuild.yaml  deploy.ps1  h origin docker-support  requirements.txt  tatus  tatus -sb
.streamlit/: config.toml
docs/: CI_CD_GUIDE.md  (+7 more)
vale-refeicao-ia/: .dockerignore  .gitignore  ANALISE_ARQUIVOS_DUPLICADOS.md  ATUALIZACAO_LIMITES.md  COMO_APLICAR_MUDANCAS.md  CONFIGURACAO_ENV.md  CONFIGURACAO_SQLITE.md  CONFIGURAR_ENV.md  CONFIGURAR_IAM_SIGNED_URL.md  CONFIGURAR_SERVICE_ACCOUNT_KEY.md  CONTRIBUTING.md  CORRECAO_DUPLICACAO_EXCEL_E_TOTAL.md  CORRECAO_EXCEL_DUPLICADO.md  CORRECAO_LINHA_TOTAL_EXTRA.md  CORRECAO_UPLOAD_SIMPLIFICADO.md  DEPLOY.md  DEPLOY_CLOUD_RUN.md  DEPLOY_RAPIDO.md  Dockerfile  ESTADO_ATUAL.md  EXPLICACAO_LIMITE_CLOUD_RUN.md  INSTALACAO_E_TESTE.md  INSTRUCOES_FINAIS.md  LICENSE  LIMPAR_ARQUIVOS_DUPLICADOS.bat  LIMPAR_ARQUIVOS_DUPLICADOS.ps1  MELHORIA_CONTRATADOS.md  MELHORIA_TOTALIZACAO_EXCEL.md  PARAMETROS_PROJETO.md  PORQUE_POSTGRESQL.md  PROBLEMA_BUILD_RESOLVIDO.md  PROJETO_COMPLETO.md  README.md  RESUMO_CORRECOES.md  REVISAO_FINAL_PROJETO.md  SIMPLIFICACAO_UPLOAD.md  TESTE_LIMITE_CLOUD_RUN.md  TESTE_LOCAL_VALIDADO.md  TESTE_SERVIDOR_REMOTO.md  UPLOAD_ARQUIVOS_GRANDES.md  (+27 more)
vale-refeicao-ia/.streamlit/: config.toml
vale-refeicao-ia/docs/: FLUXO_AGENTE_EDA.md  GERACAO_CODIGO_LLM.md
vale-refeicao-ia/exemplos/: beneficios_teste.csv  funcionarios_teste.csv
vale-refeicao-ia/prompts/: calculation_prompts.yaml  extraction_prompts.yaml  report_prompts.yaml
vale-refeicao-ia/src/: __init__.py
vale-refeicao-ia/src/agents/: __init__.py  base_agent.py  base_agent_simple.py  calculation_agent.py  extraction_agent.py  log_utils.py  report_agent.py
vale-refeicao-ia/src/config/: __init__.py  settings.py
vale-refeicao-ia/src/data/: __init__.py  database.py  models.py
vale-refeicao-ia/src/ui/: __init__.py  components.py
vale-refeicao-ia/src/ui/pages/: __init__.py  agent_monitor.py  calculations.py  database_viewer.py  processing.py  prompts_manager.py  reports.py  upload.py
vale-refeicao-ia/src/utils/: __init__.py  cloud_storage.py  debug_upload.py  eda_tool.py  excel_generator.py  python_executor.py
(+1 files in other folders)
